set user auth, fix style of prevroom side on mobile

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -34,6 +34,7 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 
+/* ===== SCROLLBAR STYLE ===== */
 *::-webkit-scrollbar {
   width: 1em;
 }
@@ -53,6 +54,7 @@ $input-shadow: none;
   background: $body-background-color;
 }
 
+/* ===== NAVBAR STYLE ===== */
 .nav-button {
   @extend .button;
   border-radius: 2em !important;
@@ -69,6 +71,8 @@ $input-shadow: none;
 #swal2-title, #swal2-content {
   color: $text;
 }
+
+/* ===== FORM STYLE ===== */
 .labelform {
   @extend .label;
   color: $text !important;
@@ -82,6 +86,7 @@ $input-shadow: none;
   transform: scale(0.8);
 }
 
+/* ===== ROOM HISTORY STYLE ===== */
 .prevroom-side {
   position: fixed;
   padding: 0em 1em 2em 0 !important;
@@ -95,11 +100,40 @@ $input-shadow: none;
   box-shadow: 5px 0 10px 5px rgba(0,0,0,0.5);
 }
 
-.prevroom {
+.prevroom-row {
   padding: 0.5em 2em;
   &:hover { cursor: pointer}
   &:nth-child(odd) {
     background-color: $body-background-color;
+  }
+}
+
+.prevroom-btn {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  #prevroom-side {
+    display: none;
+  }
+
+  .prevroom-side-open {
+    display: block!important;
+    width: 80%!important;
+  }
+
+  .prevroom-btn {
+    display: block;
+    position: fixed;
+    width: 10em;
+    top: 0; left: calc(50% - 5em);
+    z-index: 50;
+    padding: 0.5em;
+    text-align: center;
+    border-radius: 0 0 1em 1em;
+    background-color: $bg-secondary;
+    user-select: none;
+    cursor: pointer;
   }
 }
 
